--- a/index.css
+++ b/index.css
@@ -1,8 +1,27 @@
 /* Metadata */
+
+@font-face {
+    font-family: recoleta;
+    src: url(/assets/recoleta/Recoleta-Bold.ttf);
+}
+@font-face {
+    font-family: plus-jakarta-sans-medium;
+    src: url(assets//plus-jakarta-sans/PlusJakartaSans-Medium.ttf);
+}
+@font-face {
+    font-family: plus-jakarta-sans-regular;
+    src: url(assets//plus-jakarta-sans/PlusJakartaSans-Regular.ttf);
+}
 :root{
     --red : #be185d;
     --lightblue : #0ea5e9;
     --darkblue : #0f172a;
+
+    --sky-blue: #375e97;
+    --sunset-red: #fb6542;
+    --sunflower-yellow: #ffbb00;
+    --grass-green : #3f681c;
+    --black : #000000;
 }
 
 *{
@@ -12,19 +31,11 @@
     outline: 0px;
     padding: 0px;
 
-    /* border: 1px solid yellow; */
+    /* border: 10px solid black; */
 }
 
 body{
-    background-color:#0f172a;
-    background-image:
-    radial-gradient(at 8% 13%, hsla(199, 89%, 48%,0.7) 0px, transparent 50%),
-    radial-gradient(at 98% 93%, hsla(199, 89%, 48%,0.25) 0px, transparent 20%),
-    radial-gradient(at 50% 88%, hsla(335, 78%, 42%,0.2) 0px, transparent 50%);
-    background-position: center center;
-    background-repeat:no-repeat;
-    background-size: cover;
-    height: 789px;
+    background-color:var(--sunflower-yellow);
 }
 
 .spacer{
@@ -39,40 +50,36 @@ body{
     max-width: 80%;
 }
 
+.top-heading{
+    font-family: recoleta;
+    font-size: 50px;
+    text-align: center;
+}
+
 .calculator-holder{
-    margin-top: 3%;
-    height: 90%;
+    margin-top: 1%;
+    height: 500px;
+    border-color: aliceblue;
 
-
-    background: rgba( 255, 255, 255, 0.25 );
-    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-    backdrop-filter: blur( 4px );
-    -webkit-backdrop-filter: blur( 4px );
-    border-radius: 10px;
-    border: 1px solid rgba( 255, 255, 255, 0.18 );
 }
 
 .calculator-input-holder{
     height: 10%;
-    margin: 1%;
+    margin: 1%; 
 }
 .calculator-input{
 
     min-width: 100%;
     max-width: 100%;
-    min-height: 100%;
-    max-height : 100%;
-    border-radius: 10px;
+    min-height: 150%;
+    max-height : 150%;
+    border-radius: 15px;
     padding: 10px;
     font-size: 400%;
-    color: white;
+    color: var(--sky-blue);
+    font-family: plus-jakarta-sans-medium;
+    border: 5px solid black;
+    box-shadow: 7px 7px black;
 
-
-    background: rgba( 255, 255, 255, 0.25 );
-    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-    backdrop-filter: blur( 4px );
-    -webkit-backdrop-filter: blur( 4px );
-    border-radius: 10px;
-    border: 1px solid rgba( 255, 255, 255, 0.18 );
 }
 
